--- a/froztedd02.html
+++ b/froztedd02.html
@@ -7,11 +7,11 @@
 
 <table style="width:60%;" align="center">
   <tr>
-    <td><a rel="noopener" href="Assignment#1.html">Link to Assignment #1</a></td>
+    <td><a rel="noopener" href="Assignment 1/Assignment 1/index.html">Link to Assignment #1</a></td>
       <td></td>
   </tr>
     <tr>
-    <td><a rel="noopener" href="Assignment#2.html">Link to Assignment #2</a></td>
+    <td><a rel="noopener" href="">Link to Assignment #2</a></td>
     <td><a rel="noopener" href="Assignment#1 Cloud.html">Link to Assignment #2 Cloud</a></td>    
   </tr>
   <tr>
