--- a/froztedd02.html
+++ b/froztedd02.html
@@ -16,7 +16,7 @@
   </tr>
   <tr>
     <td><a rel="noopener" href="https://weatherappnew-441709.uc.r.appspot.com/">Link to Assignment #3</a></td>
-    <td><a rel="noopener" href="Assignment#3 Cloud.html">Link to Assignment #3 Cloud</a></td> 
+    <td><a rel="noopener" href="https://weatherappnew-441709.uc.r.appspot.com/api/get_weather?street=1100%20Congress%20Ave&city=Austin&state=Texas">Link to Assignment #3 Cloud</a></td> 
   </tr>
   <tr>
      <td></td>
