--- a/froztedd02.html
+++ b/froztedd02.html
@@ -20,7 +20,7 @@
   </tr>
   <tr>
      <td></td>
-    <td><a rel="noopener" href="Assignment#4 Cloud.html">Link to Assignment #4 Cloud</a></td> 
+    <td><a rel="noopener" href="https://weatherandroidapp-443501.uc.r.appspot.com/api/get_weather?street=1100%20Congress%20Ave&city=Austin&state=Texas">Link to Assignment #4 Cloud</a></td> 
   </tr>
   </table>
 
